# complex-systems-analyzer

./: .gitignore  Cargo.toml
docs/: compute-module.md  config-logging-module.md  events-io-module.md  file-directory.md  rust-csa-spec.md  storage-module.md  system-module.md  threading-lifecycle-module.md  ui-vis-module.md  validation-error-module.md
src/: lib.rs  main.rs
src/compute/: engine.rs  mod.rs  task.rs
src/compute/algorithms/: centrality.rs  community.rs  mod.rs  path.rs
src/config/: mod.rs  validation.rs
src/core/: mod.rs  system.rs
src/core/types/: mod.rs
src/error/: mod.rs
src/events/: mod.rs
src/graph/: mod.rs
src/io/: exporters.rs  files.rs  importers.rs  mod.rs
src/logging/: formatters.rs  mod.rs
src/logging/handlers/: console.rs  file.rs  mod.rs
src/runtime/: lifecycle.rs  mod.rs  scheduler.rs  stats.rs  thread_pool.rs
src/storage/: cache.rs  mod.rs  rocks.rs  sqlite.rs
src/ui/: app.rs  mod.rs  state.rs
src/ui/views/: analysis.rs  graph.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
src/ui/widgets/: controls.rs  edge.rs  mod.rs  node.rs
src/util/: gpu.rs  math.rs  mod.rs
src/util/spatial/: mod.rs  quadtree.rs  rtree.rs
src/validation/: handlers.rs  mod.rs  validators.rs
src/visualization/: force_directed.rs  layout.rs  mod.rs  renderer.rs
