[package]
name = "complex-systems-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UI and visualization
tauri = { version = "1.0", features = ["api-all"] }
wgpu = "0.19"
winit = "0.29"
raw-window-handle = "0.6"

# Async and concurrency
futures = "0.3"
parking_lot = "0.12"
rayon = "1.5"
async-trait = "0.1"
num_cpus = "1.0"

# Storage
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# System monitoring
sysinfo = "0.29"

# Utilities
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
csv = "1.3"
zip = "0.6"
infer = "0.13"
rand = "0.8"

# Additional dependencies
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
